refactor formatting and filters pt. 1

--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -18,7 +18,7 @@ Um Prozesse zu erstellen und auszuführen benötigst du das Tool xref:automatisi
 
 Wenn du einen neuen Arbeitsschritt anlegst, wählst du den Typ des Arbeitsschrittes.
 
-Klicke auf **Hinzufügen** und nimm die Einstellungen wie auf den Unterseiten beschrieben vor.
+Klicke auf *Hinzufügen* und nimm die Einstellungen wie auf den Unterseiten beschrieben vor.
 
 [#auftragsabwicklung]
 == Auftragsabwicklung
@@ -32,12 +32,12 @@ Erstelle zunächst einen Arbeitsschritt.
 [.instruction]
 Arbeitsschritt erstellen:
 
-. Klicke auf **Neuer Arbeitsschritt**.
-. Wähle als Typ **Auftragsabwicklung**.
-. Klicke auf **Speichern**. +
+. Klicke auf *Neuer Arbeitsschritt*.
+. Wähle als Typ *Auftragsabwicklung*.
+. Klicke auf *Speichern*. +
 → Das Einstellungsfenster wird geöffnet.
 
-Bei einem bereits erstellten Arbeitsschritt klickst du auf den **Bearbeiten**, um dieses Fenster zu öffnen.
+Bei einem bereits erstellten Arbeitsschritt klickst du auf *Bearbeiten*, um dieses Fenster zu öffnen.
 
 ==== Einstellungen
 
@@ -51,18 +51,18 @@ In diesem Bereich werden allgemeine Einstellungen für den Arbeitsschritt vorgen
 |====
 |Einstellung |Erläuterung
 
-| **Name**
+| *Name*
 |Einen Namen wählen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
 
-| **Anzahl**
+| *Anzahl*
 |Eingeben, wie viele Aufträge pro Durchlauf erfasst werden sollen.
 
-| **Folgeschritt**
+| *Folgeschritt*
 |Wählen, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
-**Eingabe abwarten** = Der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern das System wartet einen erneuten Klick auf **Start** in der Ausführung des Prozesses ab. +
-**Automatisch starten** = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
+*Eingabe abwarten* = Der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern das System wartet einen erneuten Klick auf *Start* in der Ausführung des Prozesses ab. +
+*Automatisch starten* = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
 
-| **Position**
+| *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
 Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Andere Position wählen, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
@@ -87,107 +87,100 @@ Die Filter verwendest du, um nur bestimmte Aufträge mit dem Arbeitsschritt *Auf
 | *Fortsetzen* = Mit dieser Einstellung wird die letzte Box-Kommissionierung beim nächsten Start des Prozesses fortgesetzt. +
 Benutzer:innen xref:automatisierung:FAQ.adoc#400[werden darauf hingewiesen], wenn sie eine Box-Kommissionierung gestartet, jedoch nicht abgeschlossen haben. Willst du die angefangene Box-Kommissionierung aus irgendeinen Grund nicht fortfahren, kannst du die xref:automatisierung:FAQ.adoc#400[Box-Kommissionierung stattdessen zurücksetzen].
 
-| **Anzahl Auftragspositionen**
-|Einen **Operator** aus der Dropdown-Liste wählen und einen Wert in das Feld dahinter eingeben. So werden nur Aufträge gefiltert, die eine bestimmte Anzahl an Auftragspositionen (Artikeln) enthalten.
+| *Anzahl Auftragspositionen*
+|Wähle einen *Operator* aus der Dropdown-Liste und gib einen Wert in das Feld dahinter ein. So werden nur Aufträge gefiltert, die eine bestimmte Anzahl an Auftragspositionen (Artikeln) enthalten.
 
-| **Auftragstyp**
-|Wenn nur bestimmte Aufträge für den Prozess verwendet werden sollen, den Auftragstyp wählen. Für einige Auftragstypen stehen auch Kombinationen zur Auswahl.
+| *Auftragstyp*
+|Wähle einen Auftragstyp, um den Prozess nur auf Aufträge von einem bestimmten Typ anzuwenden.
 
-| **Auftragslager**
-|Filtert Aufträge nach einem Bestimmten Lager. Füge den Filter hinzu und wähle ein Lager aus der Dropdown-Liste. +
+| *Auftragslager*
+|Möchtest du Aufträge nach einem bestimmten Lager filtern? Füge den Filter hinzu und wähle ein Lager aus der Dropdown-Liste. +
 Filtere danach optional weiter nach einem bestimmten *Lagerort*.
 
-| **Datum**
-|Einen Zeitpunkt wählen, zum Beispiel **gestern**, oder einen Bereich, zum Beispiel **in der Vergangenheit**, um alle bisherigen Aufträge zu filtern. Eine Mehrfachauswahl ist möglich.
+| *Datum*
+|Wähle einen Zeitpunkt, zum Beispiel *gestern*, oder einen Bereich, zum Beispiel *in der Vergangenheit*, um alle bisherigen Aufträge zu filtern. Eine Mehrfachauswahl ist möglich. Wähle zusätzlich aus der Dropdown-Liste aus, ob du nach dem Datum des *Auftragseingang*, *Zahlungseingang*, *Warenausgang* oder dem *Liefertermin* filtern möchtest.
 
 | *Aktuelle Rechnung*
-|Filtert nach Aufträge, bei denen eine aktuelle Rechnung *verfügbar* oder *nicht verfügbar* ist.
+|Filtere nach Aufträgen, bei denen eine aktuelle Rechnung *verfügbar* oder *nicht verfügbar* ist.
 
 | *Stornobeleg*
-|Filtert nach Aufträge, bei denen ein Stornobeleg *verfügbar* oder *nicht verfügbar* ist.
+|Filtere nach Aufträgen, bei denen ein Stornobeleg *verfügbar* oder *nicht verfügbar* ist.
 
-| **Eigner**
-|Die Person, deren Aufträge gefiltert werden sollen. +
-**Aktiver Benutzer** = Person, die im System eingeloggt ist.
+| *Eigner*
+|Wähle einen Eigner aus, um nach dessen Aufträgen zu filtern. Wähle alternativ die Option *Aktiver Benutzer* aus. So wird nach den Aufträgen des Eigners gefiltert, die zum Zeitpunkt der Ausführung des Prozesses als Benutzer im plentymarkets System eingeloggt ist.
 
-| **E-Mail-Adresse**
-|Option wählen, um nur Aufträge zu filtern, bei denen eine E-Mail-Adresse **in den Kundenstammdaten enthalten** oder **nicht in den Kundenstammdaten enthalten** ist.
+| *E-Mail-Adresse*
+|Wähle die Option, um nur Aufträge zu filtern, bei denen eine E-Mail-Adresse *in den Kundenstammdaten enthalten* oder *nicht in den Kundenstammdaten enthalten* ist.
 
-| **Expressversand**
-|Wählen, ob nach Expressversand gefiltert werden soll. +
-**Ja** = nur Aufträge mit Expressversand +
-**Nein** = nur Aufträge ohne Expressversand
+| *Expressversand*
+|Wähle, ob nach Aufträgen mit Expressversand gefiltert werden soll. +
+*Ja* = Es wird nach Aufträgen mit Expressversand gefiltert +
+*Nein* = Es wird nach Aufträgen ohne Expressversand gefiltert
 
-| **Gesamt-Artikelmenge**
-|Einen **Operator** aus der Dropdown-Liste wählen und einen Wert in das Feld dahinter eingeben. Auf diese Weise werden nur Aufträge gefiltert, die eine bestimmte Stückzahl einzelner Artikel enthalten.
+| *Gesamt-Artikelmenge*
+|Wähle einen *Operator* aus der Dropdown-Liste und gib einen Wert in das Feld dahinter ein. So werden nur Aufträge gefiltert, die eine bestimmte Stückzahl einzelner Artikel enthalten.
 
-| **Gewicht**
-|Um Aufträge anhand des Gewichts in Gramm zu filtern, für einen festen Betrag den Wert eingeben und als Operator das **Gleichheitszeichen** wählen. Für Gewichtsbereiche den Wert eingeben und den passenden Operator wählen. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
-**Beispiel**: Für ein Gewicht von 3,5 kg und darüber **3500** in das Textfeld eingeben und den Operator **&gt;=** wählen.
+| *Gewicht*
+|Um Aufträge anhand des Gewichts in Gramm zu filtern, gib einen festen Wert ein und wähle als Operator das *Gleichheitszeichen*. Um nach Gewichtsbereichen zu filtern, gib einen Wert und den passenden Operator ein. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
+*Beispiel*: Für ein Gewicht von 3,5 kg und darüber *3500* in das Textfeld eingeben und den Operator *&gt;=* wählen.
 
-| **Herkunft**
-|Die Herkunft der Aufträge wählen, die gefiltert werden sollen. Eine Mehrfachauswahl ist möglich.
+| *Herkunft*
+|Die <<xref:auftraege:auftragsherkunft.adoc#[Herkunft der Aufträge] wählen, die gefiltert werden sollen. Eine Mehrfachauswahl ist möglich.
 
-| **Kundenklasse**
-|Eine oder mehrere Kundenklassen wählen.
+| *Kundenklasse*
+|Wähle eine oder mehrere xref:crm:kontakte-verwalten.adoc#15[Kundenklassen], nach denen die Aufträge gefiltert werden sollen.
 
 | *Lagerort*
-|Filtert Aufträge nach einem bestimmten Lagerort. +
+|Filtere Aufträge nach einem bestimmten Lagerort. +
 Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropdown-Liste. Danach kannst du mit diesem Filter *Regal*, *Boden* und *Lagerort* bestimmen.
 
-| **Lieferland**
-|Das Lieferland der Aufträge wählen, die gefiltert werden sollen. Es stehen alle Lieferländer zur Verfügung, nicht nur die aktiven Lieferländer des Systems.
+| *Lieferland*
+|Wähle das Lieferland der Aufträge, die gefiltert werden sollen. Es stehen alle Lieferländer zur Verfügung, nicht nur die aktiven Lieferländer des Systems.
 
-| **Mandant (Shop)**
-|Den Mandant (Shop) wählen, dessen Aufträge gefiltert werden sollen. Eine Mehrfachauswahl ist möglich.
+| *Mandant (Shop)*
+|Wähle den Mandant (Shop) aus, dessen Aufträge gefiltert werden sollen. Eine Mehrfachauswahl ist möglich.
 
-| **Markierung**
-|Aufträge anhand einer bestimmten Markierung filtern. Mit der Einstellung **Ohne** werden Aufträge gefiltert, die keine Markierung haben.
+| *Markierung*
+|Filtere Aufträge anhand einer bestimmten Markierung. Mit der Einstellung *Ohne* werden Aufträge gefiltert, die keine Markierung haben.
 
-//| **Offene Pickliste**
-//|Offene xref:auftraege:pickliste.adoc#[Picklisten] sind noch nicht fertig abgearbeitete Picklisten. Damit der Filter wirksam wird, muss eine offene Pickliste vorhanden sein. Ist das nicht der Fall, greift der Filter nicht. Es werden dann die Aufträge anhand der sonstigen dort eingestellten Filter geladen. Optionen: +
-//**Verwenden** = Eine offene Pickliste fertig bearbeiten. +
-//**Nicht verwenden** = Mit einer neuen Pickliste beginnen. +
-//Wenn die Aufträge durch den Filter mit der Einstellung **Verwenden** gesucht werden und eine offene Pickliste gefunden wird, werden die Aufträge der offenen Pickliste geladen. Alle anderen Filter des Arbeitsschrittes werden dann ignoriert. Damit die geladene Pickliste abgearbeitet werden kann, muss in der Aktion xref:automatisierung:aktionen.adoc#140[Artikelerfassung] ein xref:warenwirtschaft:lager-einrichten.adoc#[Box-Regal] eingestellt sein. +
-//Wird der Filter mit der Option **Nicht verwenden** inaktiv gestellt, wird im Prozessdurchlauf automatisch eine neue Pickliste angelegt, wenn die bereits erwähnte Bedingung erfüllt ist. Wenn bei dieser Einstellung jedoch noch eine offene Pickliste vorhanden ist, wird eine Fehlermeldung angezeigt und der Prozess abgebrochen. In diesem Fall muss die bestehende offene Pickliste zuerst mit einem Prozess abgearbeitet werden.
+| *Packstation*
+|Wähle, ob nach Aufträgen gefiltert werden soll, die an eine Packstation geliefert werden. +
+*Ja* = Es wird nach Aufträgen mit Packstation gefiltert +
+*Nein* = Es wird nach Aufträgen ohne Packstation gefiltert *
 
-| **Packstation**
-|Wählen, ob nach Packstationen gefiltert werden soll. +
-**Ja** = nur Aufträge mit Packstation +
-**Nein** = nur Aufträge ohne Packstation
+| *Rechnungsbetrag*
+|Um Aufträge anhand des Rechnungsbetrags zu filtern, gib einen Wert ein und wähle als Operator das Gleichheitszeichen. Für Rechnungsbetragsbereiche den Betrag eingeben und den passenden Operator wählen. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
+*Beispiel*: Für den Rechnungsbetrag 39,90 Euro und darüber *39,90* in das Textfeld eingeben und den Operator *&gt;=* wählen.
 
-| **Rechnungsbetrag**
-|Um Aufträge anhand des Rechnungsbetrags zu filtern, für einen festen Betrag den Wert eingeben und als Operator das Gleichheitszeichen wählen. Für Rechnungsbetragsbereiche den Betrag eingeben und den passenden Operator wählen. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
-**Beispiel**: Für den Rechnungsbetrag 39,90 Euro und darüber **39,90** in das Textfeld eingeben und den Operator **&gt;=** wählen.
+| *Status*
+|Wähle einen xref:auftraege:auftraege-verwalten.adoc#1200[Status] aus, um nach Aufträgen mit dem gewählten Status zu filtern.
 
-| **Status**
-|Einen Status wählen, um nur die Aufträge mit dem gewählten Status zu filtern.
+| *Treueprogramm*
+|Wähle ein Treueprogramm, mehrere oder keines um nur Aufträge aus diesem oder ohne Treueprogramm abzuwickeln. +
+*_Wichtig_:* Treueprogramme sind nur bei Aufträgen für Aufträge von eBay Plus oder Amazon möglich und werden nur berücksichtigt, wenn sie im entsprechenden xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] aktiviert sind.
 
-| **Treueprogramm**
-|Ein Treueprogramm, mehrere oder keines wählen, um nur Aufträge aus diesem oder ohne Treueprogramm abzuwickeln.
+| *Versanddienstleister*
+|Wähle einen Versanddienstleister, um nur Aufträge mit diesem Versanddienstleister zu filtern.
 
-| **Versanddienstleister**
-|Einen Versanddienstleister wählen, um nur Aufträge mit diesem Versanddienstleister zu filtern.
-
-| **Versandkosten**
+| *Versandkosten*
 |Um Aufträge anhand der Versandkosten zu filtern, für einen festen Betrag den Wert eingeben und als Operator das Gleichheitszeichen wählen. Für Versandkostenbereiche den Betrag eingeben und den passenden Operator wählen. Mit beiden Textfeldern ist die gleichzeitige Anwendung unterschiedlicher Filterbereiche möglich. +
-**Beispiel**: Für den Versandkostenbereich 3,90 Euro und darüber **3,90** in das Textfeld eingeben und den Operator **&gt;=** wählen.
+*Beispiel*: Für den Versandkostenbereich 3,90 Euro und darüber *3,90* in das Textfeld eingeben und den Operator *&gt;=* wählen.
 
-| **Versandprofile**
-|Ein oder mehrere Versandprofile wählen, um nur Aufträge mit diesen Versandprofilen zu filtern.
+| *Versandprofile*
+|Whähle ein oder mehrere xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofile], um nur Aufträge mit diesen Versandprofilen zu filtern.
 
-| **Versandregion**
-|Eine Versandregion wählen, um nur Aufträge der Region zu filtern.
+| *Versandregion*
+|Wähle eine xref:fulfillment:versand-vorbereiten.adoc#400[Versandregion], um nur Aufträge der Region zu filtern.
 
-| **Warenausgang**
-|Wählen, wie nach Warenausgang gefiltert werden soll: +
-**Nicht gebucht** = nur Aufträge mit nicht gebuchtem Warenausgang +
-**Gebucht** = nur Aufträge mit gebuchtem Warenausgang +
-**Heute** = nur Aufträge mit heutigem Warenausgang +
-**Gestern** = nur Aufträge mit gestrigem Warenausgang
+| *Warenausgang*
+|Wähle, wie nach dem Warenausgang der Aufträge gefiltert werden soll: +
+*Nicht gebucht* = nur Aufträge mit nicht gebuchtem Warenausgang +
+*Gebucht* = nur Aufträge mit gebuchtem Warenausgang +
+*Heute* = nur Aufträge mit heutigem Warenausgang +
+*Gestern* = nur Aufträge mit gestrigem Warenausgang
 
-| **Zahlung**
-|Wählen, nach welchem Zahlungsstatus Aufträge gefiltert werden. +
+| *Zahlung*
+|Wähle, nach welchem Zahlungsstatus Aufträge gefiltert werden. +
 *Zahlung prüfen* = Nur Aufträge, die sich in einem Status befinden, der (manuell) geprüft werden soll, also unbezahlte, teilgezahlte und überzahlte Aufträge. +
 *Nur unbezahlt* = Nur Aufträge, für die noch keine Zahlung eingegangen ist. +
 *Nur bezahlt* = Nur vollständig bezahlte Aufträge +
@@ -196,37 +189,36 @@ Füge zuerst den Filter *Auftragslager* hinzu und wähle ein Lager aus der Dropd
 *Nur Überzahlung*= Nur Aufträge, für die eine Überzahlung eingegangen ist. +
 *Unbezahlt und Teilzahlung* = Nur Aufträge, bei denen noch keine oder nur eine teilweise Zahlung eingegangen ist.
 
-| **Zahlungsart**
-|Eine oder mehrere Zahlungsarten wählen, um nur Aufträge mit diesen Zahlungsarten zu filtern.
+| *Zahlungsart*
+|Wähle eine oder mehrere Zahlungsarten, um nur Aufträge mit diesen Zahlungsarten zu filtern.
 
 2+^|SEPA
 
-| **Art der Lastschrift**
-|Wählen, ob Aufträge mit **Erstlastschrift** oder mit **Folgelastschrift** gefiltert werden sollen.
+| *Art der Lastschrift*
+|Wähle, ob Aufträge mit *Erstlastschrift* oder mit *Folgelastschrift* gefiltert werden sollen.
 
-| **Art des Mandats**
-| **SEPA-Basis-Lastschrift** = Mandat vergleichbar der Einzugsermächtigung (Standard-Kunden) +
-**SEPA-Firmen-Lastschrift** = Mandat vergleichbar des Abbuchungsauftrags (Firmen-Kunden, B2B)
+| *Art des Mandats*
+| *SEPA-Basis-Lastschrift* = Mandat vergleichbar der Einzugsermächtigung (Standard-Kunden) +
+*SEPA-Firmen-Lastschrift* = Mandat vergleichbar des Abbuchungsauftrags (Firmen-Kunden, B2B)
 
-| **Ausführungsmodalität**
-| **Einmalige Zahlung** = Standard-Aufträge +
-**Wiederkehrende Zahlung** = Regelmäßige Abbuchungen, Abo-Verträge etc.
+| *Ausführungsmodalität*
+| *Einmalige Zahlung* = Standard-Aufträge +
+*Wiederkehrende Zahlung* = Regelmäßige Abbuchungen, Abo-Verträge etc.
 
-| **IBAN &amp; BIC**
-|Wählen, ob Aufträge gefiltert werden sollen, bei denen IBAN und BIC **vorhanden** oder **nicht vorhanden** sind.
+| *IBAN &amp; BIC*
+|Wähle, ob Aufträge gefiltert werden sollen, bei denen IBAN und BIC *vorhanden* oder *nicht vorhanden* sind.
 
-| **SEPA-Lastschriftmandat**
-|Filtert Aufträge danach, ob der Kunde das SEPA-Lastschriftmandat bestätigt und unterschrieben hat. +
+| *SEPA-Lastschriftmandat*
+|Filtere Aufträge danach, ob der Kunde das SEPA-Lastschriftmandat bestätigt und unterschrieben hat. +
 *nicht vorhanden* = Nur Aufträge von Kontakten werden verarbeitet, die das SEPA-Lastschriftmandat bestätigt und unterschrieben haben. +
 *vorhanden* = Nur Aufträge von Kontakten werden verarbeitet, die das SEPA-Lastschriftmandat nicht bestätigt und unterschrieben haben.
 |====
-
 
 === Aufträge markieren
 
 Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du diesen Aufträgen in diesem Bereich eine Markierung oder einen anderen Status zu. Es ist hier auch möglich, den Benutzer zu ändern, wenn die Aufträge zum Beispiel nach Durchlauf des Prozesses einer anderen Abteilung zugeordnet werden sollen.
 
-<<table-work-steps-select-orders>> erläutert die Markierungen des Arbeitsschrittes **Auftragsabwicklung**.
+<<table-work-steps-select-orders>> erläutert die Markierungen des Arbeitsschrittes *Auftragsabwicklung*.
 
 [[table-work-steps-select-orders]]
 .Arbeitsschritt einrichten: Aufträge markieren
@@ -238,17 +230,17 @@ Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du di
 |Wenn durch diesen Arbeitsschritt der Status der Aufträge geändert werden soll, den gewünschten Status aus der Dropdown-Liste wählen.
 
 | *Neuer Eigner*
-|Die Person wählen, der die Aufträge durch diesen Arbeitsschritt zugewiesen werden sollen. Optional **angemeldeten Benutzer** oder **Ohne Änderung** wählen, wenn die Person unverändert bleiben soll.
+|Wähle die Person wähle, der die Aufträge durch diesen Arbeitsschritt zugewiesen werden sollen. Wähle optional den *angemeldeten Benutzer* oder *Ohne Änderung*, wenn die Person unverändert bleiben soll.
 
 | *Neue Markierung*
-|Wenn durch diesen Arbeitsschritt die Markierung der Aufträge geändert werden soll, die gewünschte Markierung aus der Dropdown-Liste wählen.
+|Wähle die gewünschte Markierung aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt die Markierung der Aufträge geändert werden soll.
 |====
 
 === Sortierung
 
 Die Sortierung bestimmt die Reihenfolge der Aufträge.
 
-<<table-work-step-sorting>> erläutert die Sortierung des Arbeitsschrittes **Auftragsabwicklung**.
+<<table-work-step-sorting>> erläutert die Sortierung des Arbeitsschrittes *Auftragsabwicklung*.
 
 [[table-work-step-sorting]]
 .Arbeitsschritt einrichten: Sortierung
@@ -257,13 +249,13 @@ Die Sortierung bestimmt die Reihenfolge der Aufträge.
 |Einstellung |Erläuterung
 
 | *Sortierung*
-|Eine Sortierung wählen, um die Reihenfolge der Aufträge festzulegen. Sortiert werden kann **Aufsteigend** oder **Absteigend** nach den folgenden Optionen: +
-**Auftrags-ID** = Standard-Einstellung +
-**Artikel-ID** +
-**Kunden-ID** +
-**Rechnungsnummer** +
-**Artikelnummer** +
-**Position Lagerort** +
+|Wähle eine Sortierung, um die Reihenfolge der Aufträge festzulegen. Sortiert werden kann *Aufsteigend* oder *Absteigend* nach den folgenden Optionen: +
+*Auftrags-ID* = Standard-Einstellung +
+*Artikel-ID* +
+*Kunden-ID* +
+*Rechnungsnummer* +
+*Artikelnummer* +
+*Position Lagerort* +
 *_Hinweis:_* Bei der Sortierung wird nur die erste Auftragsposition berücksichtigt.
 |====
 
@@ -275,9 +267,9 @@ Für die Sortierung wird nur die erste Position eines Auftrags berücksichtigt.
 
 === Übersicht der Aktionen und Subaktionen
 
-Nachdem du alle Einstellungen vorgenommen hast, fügst du dem Arbeitsschritt **Aktionen** und **Subaktionen** hinzu.
+Nachdem du alle Einstellungen vorgenommen hast, fügst du dem Arbeitsschritt *Aktionen* und *Subaktionen* hinzu.
 
-Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:subaktionen.adoc#[Subaktionen] stehen dir für den Arbeitsschritt **Auftragsabwicklung** zur Verfügung. Weiterführende Informationen und Einstellungsmöglichkeiten erhältst du auf den Unterseiten.
+Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:subaktionen.adoc#[Subaktionen] stehen dir für den Arbeitsschritt *Auftragsabwicklung* zur Verfügung. Weiterführende Informationen und Einstellungsmöglichkeiten erhältst du auf den Unterseiten.
 
 * xref:automatisierung:aktionen.adoc#110[Abhol-/Lieferschein]
 ** xref:automatisierung:subaktionen.adoc#180[Drucken]
@@ -448,7 +440,7 @@ Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:
 [#auftragsbearbeitung]
 == Auftragsbearbeitung
 
-Mit einem Arbeitsschritt des Typs **Auftragsbearbeitung** kannst du festlegen, wie einzelne Aufträge weiter bearbeitet werden sollen, nachdem diese zum Beispiel mittels eines Handscanners erfasst wurden. Es handelt sich um einen sehr flexiblen Arbeitsschritt, den du durch die Verwendung der entsprechenden Aktionen und Subaktionen nach deinen Wünschen konfigurierst.
+Mit einem Arbeitsschritt des Typs *Auftragsbearbeitung* kannst du festlegen, wie einzelne Aufträge weiter bearbeitet werden sollen, nachdem diese zum Beispiel mittels eines Handscanners erfasst wurden. Es handelt sich um einen sehr flexiblen Arbeitsschritt, den du durch die Verwendung der entsprechenden Aktionen und Subaktionen nach deinen Wünschen konfigurierst.
 
 === Einstellung
 
@@ -457,11 +449,11 @@ Erstelle zunächst einen Arbeitsschritt.
 [.instruction]
 Arbeitsschritt erstellen:
 
-. Klicke auf **Neuer Arbeitsschritt**.
-. Wähle als Typ **Auftragsbearbeitung** und klicke auf **Speichern**. +
+. Klicke auf *Neuer Arbeitsschritt*.
+. Wähle als Typ *Auftragsbearbeitung* und klicke auf *Speichern*. +
 → Das Einstellungsfenster wird geöffnet.
 
-Bei einem bereits erstellten Arbeitsschritt klickst du auf den **Bearbeiten**, um dieses Fenster zu öffnen.
+Bei einem bereits erstellten Arbeitsschritt klickst du auf den *Bearbeiten*, um dieses Fenster zu öffnen.
 
 <<table-work-step-single-settings>> erläutert die Einstellungen des Arbeitsschrittes.
 
@@ -476,10 +468,10 @@ Bei einem bereits erstellten Arbeitsschritt klickst du auf den **Bearbeiten**, u
 
 | *Folgeschritt*
 |Wähle, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
-**Eingabe abwarten** = Der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern es wird vom System ein erneuter Klick auf **Start** in der Ausführung des Prozesses abgewartet. +
-**Automatisch starten** = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
+*Eingabe abwarten* = Der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern es wird vom System ein erneuter Klick auf *Start* in der Ausführung des Prozesses abgewartet. +
+*Automatisch starten* = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
 
-| **Position**
+| *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
 Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Andere Position wählen, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
@@ -491,12 +483,12 @@ Der betreffende Arbeitsschritt wird angezeigt. Wenn du dann mit der Maus auf das
 [NOTE]
 .Weitere Elemente hinzufügen
 ====
-Mit dem **grünen Plus** fügst du eine **Aktion** oder eine **Subaktion** hinzu, indem du das gewünschte Element aus der Dropdown-Liste wählst.
+Mit dem *grünen Plus* fügst du eine *Aktion* oder eine *Subaktion* hinzu, indem du das gewünschte Element aus der Dropdown-Liste wählst.
 ====
 
 === Übersicht der Aktionen und Subaktionen
 
-Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:subaktionen.adoc#[Subaktionen] stehen dir für den Arbeitsschritt **Auftragsbearbeitung** zur Verfügung. Informationen zu den Einstellungen erhältst du auf der jeweiligen Unterseite.
+Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:subaktionen.adoc#[Subaktionen] stehen dir für den Arbeitsschritt *Auftragsbearbeitung* zur Verfügung. Informationen zu den Einstellungen erhältst du auf der jeweiligen Unterseite.
 
 * xref:automatisierung:aktionen.adoc#110[Abhol-/Lieferschein]
 ** xref:automatisierung:subaktionen.adoc#180[Drucken]
@@ -675,7 +667,7 @@ Folgende xref:automatisierung:aktionen.adoc#[Aktionen] und xref:automatisierung:
 [#wareneingang]
 == Wareneingang
 
-Der Arbeitsschritt **Wareneingang** ermöglicht u.a. das Suchen und Erfassen von einzelnen Wareneingängen, die Bestellsuche mit anschließender Buchung der Artikel einer Bestellung und die automatische Zuordnung von Nachbestellungen.
+Der Arbeitsschritt *Wareneingang* ermöglicht u.a. das Suchen und Erfassen von einzelnen Wareneingängen, die Bestellsuche mit anschließender Buchung der Artikel einer Bestellung und die automatische Zuordnung von Nachbestellungen.
 
 === Einstellung
 
@@ -684,13 +676,13 @@ Erstelle zunächst einen Arbeitsschritt.
 [.instruction]
 Arbeitsschritt erstellen:
 
-. Klicke auf **Neuer Arbeitsschritt**.
-. Wähle als Typ **Wareneingang** und klicke auf **Speichern**. +
+. Klicke auf *Neuer Arbeitsschritt*.
+. Wähle als Typ *Wareneingang* und klicke auf *Speichern*. +
 → Das Einstellungsfenster wird geöffnet.
 . Nimm die Einstellungen gemäß <<table-work-step-incoming-settings>> vor.
-. Klicke auf **Speichern**.
+. Klicke auf *Speichern*.
 
-Bei einem bereits erstellten Arbeitsschritt klickst du auf den **Bearbeiten**, um dieses Fenster zu öffnen.
+Bei einem bereits erstellten Arbeitsschritt klickst du auf *Bearbeiten*, um dieses Fenster zu öffnen.
 
 <<table-work-step-incoming-settings>> erläutert die Einstellungen des Arbeitsschrittes.
 
@@ -700,9 +692,9 @@ Bei einem bereits erstellten Arbeitsschritt klickst du auf den **Bearbeiten**, u
 |====
 |Einstellung |Erläuterung
 
-| **Position**
+| *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
-Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Andere Position wählen, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
+Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Wähle eine andere Position, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
 *_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
 
 | *Name*
@@ -710,15 +702,15 @@ Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standa
 
 | *Folgeschritt*
 |Wähle, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
-**Eingabe abwarten** = der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern es wird vom System ein erneuter Klick auf **Start** in der Ausführung des Prozesses abgewartet +
-**Automatisch starten** = ein Folgeschritt oder eine Aktion wird automatisch gestartet
+*Eingabe abwarten* = der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern es wird vom System ein erneuter Klick auf *Start* in der Ausführung des Prozesses abgewartet +
+*Automatisch starten* = ein Folgeschritt oder eine Aktion wird automatisch gestartet
 |====
 
 Der betreffende Arbeitsschritt wird angezeigt. Wenn du dann mit der Maus auf das Element zeigst, werden die Einstellungselemente sichtbar.
 
 === Übersicht der Aktionen und Subaktionen
 
-Folgende Aktionen und Subaktionen stehen dir für den Arbeitsschritt **Wareneingang** zur Verfügung. Weiterführende Informationen und Einstellungsmöglichkeiten erhältst du auf der jeweiligen Unterseite.
+Folgende Aktionen und Subaktionen stehen dir für den Arbeitsschritt *Wareneingang* zur Verfügung. Weiterführende Informationen und Einstellungsmöglichkeiten erhältst du auf der jeweiligen Unterseite.
 
 * xref:automatisierung:aktionen.adoc#150[Artikeletikett]
 ** xref:automatisierung:subaktionen.adoc#180[Drucken]
