--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -115,7 +115,9 @@ Filtere danach optional weiter nach einem bestimmten *Lagerort*.
 | *Expressversand*
 |Wähle, ob nach Aufträgen mit Expressversand gefiltert werden soll. +
 *Ja* = Es wird nach Aufträgen mit Expressversand gefiltert +
-*Nein* = Es wird nach Aufträgen ohne Expressversand gefiltert
+*Nein* = Es wird nach Aufträgen ohne Expressversand gefiltert +
+*_Wichtig_:* Damit dieser Filter korrekt funktioniert, muss im xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] der jeweiligen Aufträge die 
+Option *Expressversand* aktiviert sein.
 
 | *Gesamt-Artikelmenge*
 |Wähle einen *Operator* aus der Dropdown-Liste und gib einen Wert in das Feld dahinter ein. So werden nur Aufträge gefiltert, die eine bestimmte Stückzahl einzelner Artikel enthalten.
