--- a/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
+++ b/docs/de-de/modules/automatisierung/pages/arbeitsschritte.adoc
@@ -52,20 +52,20 @@ In diesem Bereich werden allgemeine Einstellungen für den Arbeitsschritt vorgen
 |Einstellung |Erläuterung
 
 | *Name*
-|Einen Namen wählen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
+|Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
 
 | *Anzahl*
-|Eingeben, wie viele Aufträge pro Durchlauf erfasst werden sollen.
+|Gib an, wie viele Aufträge pro Durchlauf erfasst werden sollen.
 
 | *Folgeschritt*
-|Wählen, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
+|Wähle, ob ein weiterer Arbeitsschritt manuell oder automatisch gestartet werden soll. Diese Einstellung ist nur relevant, wenn mindestens zwei Arbeitsschritte eingerichtet sind. +
 *Eingabe abwarten* = Der nächste Arbeitsschritt wird nicht automatisch gestartet, sondern das System wartet einen erneuten Klick auf *Start* in der Ausführung des Prozesses ab. +
 *Automatisch starten* = Ein Folgeschritt oder eine Aktion wird automatisch gestartet.
 
 | *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
-Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Andere Position wählen, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
-*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
+Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Wähle eine andere Position, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
+*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 |====
 
 
@@ -127,7 +127,7 @@ Option *Expressversand* aktiviert sein.
 *Beispiel*: Für ein Gewicht von 3,5 kg und darüber *3500* in das Textfeld eingeben und den Operator *&gt;=* wählen.
 
 | *Herkunft*
-|Die <<xref:auftraege:auftragsherkunft.adoc#[Herkunft der Aufträge] wählen, die gefiltert werden sollen. Eine Mehrfachauswahl ist möglich.
+|Wähle die <<xref:auftraege:auftragsherkunft.adoc#[Herkunft der Aufträge], nach der gefiltert werden soll. Eine Mehrfachauswahl ist möglich.
 
 | *Kundenklasse*
 |Wähle eine oder mehrere xref:crm:kontakte-verwalten.adoc#15[Kundenklassen], nach denen die Aufträge gefiltert werden sollen.
@@ -229,7 +229,7 @@ Damit du die Aufträge, die den Prozess durchlaufen haben, erkennst, weist du di
 |Einstellung |Erläuterung
 
 | *Neuer Status*
-|Wenn durch diesen Arbeitsschritt der Status der Aufträge geändert werden soll, den gewünschten Status aus der Dropdown-Liste wählen.
+|Wähle den gewünschten Status aus der Dropdown-Liste, wenn durch diesen Arbeitsschritt der Status der Aufträge geändert werden soll.
 
 | *Neuer Eigner*
 |Wähle die Person wähle, der die Aufträge durch diesen Arbeitsschritt zugewiesen werden sollen. Wähle optional den *angemeldeten Benutzer* oder *Ohne Änderung*, wenn die Person unverändert bleiben soll.
@@ -475,8 +475,8 @@ Bei einem bereits erstellten Arbeitsschritt klickst du auf den *Bearbeiten*, um 
 
 | *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
-Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Andere Position wählen, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
-*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
+Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Wähle eine andere Position, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
+*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 
 |====
 
@@ -697,7 +697,7 @@ Bei einem bereits erstellten Arbeitsschritt klickst du auf *Bearbeiten*, um dies
 | *Position*
 |Option wird erst wählbar, nachdem der Arbeitsschritt erstellt wurde. +
 Bei mehreren Arbeitsschritten kann hier die Reihenfolge geändert werden. Standardmäßig wird neuen Arbeitsschritten die nächste verfügbare Position zugewiesen. Wähle eine andere Position, um bei mehreren Arbeitsschritten die Reihenfolge zu ändern, in der die Arbeitsschritte abgearbeitet werden. Arbeitsschritte werden aufsteigend sortiert. Der Arbeitsschritt mit der niedrigsten Nummer wird also zuerst ausgeführt. +
-*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Dazu mit der rechten Maustaste auf den Arbeitsschritt klicken und *Nach oben verschieben* oder *Nach unten verschieben* wählen.
+*_Tipp:_* Arbeitsschritte lassen sich auch über das Kontextmenü um eine Position verschieben. Klicke dazu mit der rechten Maustaste auf den Arbeitsschritt und wähle *Nach oben verschieben* oder *Nach unten verschieben*.
 
 | *Name*
 |Name für den Arbeitsschritt. Wähle einen Namen, der den Arbeitsschritt möglichst eindeutig bezeichnet.
